推进库迁移